build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/dependencies3-isolation.phpt.warn
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:13:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:15:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:17:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'OK'
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'tests'
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	','
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'assertions'
WARNING:19:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
